--- a/backend/api-rest/pom.xml
+++ b/backend/api-rest/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -11,16 +10,28 @@
 		<version>1.0</version>
 	</parent>
 
-	<groupId>microservice</groupId>
-	<artifactId>entities</artifactId>
-	<version>1.1</version>
+	<groupId>microservicio</groupId>
+	<artifactId>api-rest</artifactId>
+	<version>1.0</version>
+	<name>api-rest</name>
 
 	<dependencies>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
