--- a/backend/api-rest/src/main/resources/application.yml
+++ b/backend/api-rest/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 spring:
   application:
     name: entities
@@ -12,6 +13,8 @@ spring:
     password: $Us3R_3sT4d1sTic4$
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -19,13 +22,11 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
     database-platform: org.hibernate.dialect.SQLServerDialect
-  
-  devtools:
-    restart:
-      enabled: true
-    livereload:
-      enabled: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.SQLServer2012Dialect
 
 server:
-  port: 4001
+  port: 4003
+
 
