--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -59,6 +59,17 @@
       </dependency>
 
       <dependency>
+         <groupId>com.fasterxml.jackson.core</groupId>
+         <artifactId>jackson-databind</artifactId>
+      </dependency>
+
+      <dependency>
+         <groupId>org.modelmapper</groupId>
+         <artifactId>modelmapper</artifactId>
+         <version>3.2.2</version>
+      </dependency>
+
+      <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-test</artifactId>
          <version>${spring-boot.version}</version>
@@ -91,6 +102,7 @@
    <modules>
       <module>entities</module>
       <module>app-terminal</module>
+      <module>api-rest</module>
    </modules>
 
 </project>
